P2/configs/app3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: nginx
        ports:
        - containerPort: 80
data:
  index.html: |
    <!DOCTYPE html>
    <html>
    <head>
      <title>APP 3</title>
    </head>
    <body>
      <h1>Hello from APP 3</h1>
    </body>
    </html>       
---
apiVersion: v1
kind: Service
metadata:
  name: app3-service
spec:
  selector:
    app: app3
  ports:
  - port: 80
    targetPort: 80
